--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,10 @@ body {
   background-color: #e7f6ff;
 }
 
+button, input {
+  font-family: 'Inter', system-ui;
+}
+
 .wrapper {
 
   background: #FFFFFF;
@@ -39,6 +43,17 @@ header {
     width: 220px;
     border-radius: 40px;
     margin-right: 30px;
+    transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+    box-shadow: 0px 14px 35px rgba(0, 0, 0, 0.06);
+    transform: translateY(-5px);
+    }
+    .favorite {
+      position: absolute;
+      cursor: pointer;
+    }
 
 span {
   font-size: 13px;
@@ -66,3 +81,57 @@ b {
     cursor: pointer;
 
   }
+.search-block {
+  border: 1px solid #f3f3f3; 
+  border-radius: 10px;
+  padding: 0 15px;
+
+  input {
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
+  }
+}
+.overlay {
+  position:absolute;
+  left: 0;
+  top:0;
+  width: 100%;
+  height:100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 1;
+}
+
+.drawer {
+  /* Rectangle 24 */
+
+position: absolute;
+width: 385px;
+right: 0;
+height: 100%;
+
+background: #FFFFFF;
+box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+padding: 30px;
+h2 {
+  margin: 0;
+}
+}
+.cartItem {
+  border: 1px solid #f3f3f3;
+  p {
+    font-size: 16px;
+  }
+  b {
+    font-size: 14px;
+  }
+  .remooveBtn {
+    opacity: 0.5;
+    cursor: pointer;
+    transition: opacity 0.2s ease-in-out;
+    &:hover {
+      opacity:1;
+    }
+  }
+}
