--- a/src/index.scss
+++ b/src/index.scss
@@ -104,24 +104,94 @@ b {
 }
 
 .drawer {
-  /* Rectangle 24 */
-
-position: absolute;
-width: 385px;
-right: 0;
-height: 100%;
-
-background: #FFFFFF;
-box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-padding: 30px;
-h2 {
-  margin: 0;
+  position: absolute;
+  width: 420px;
+  height: 100%;
+  right: 0;
+  background: #FFFFFF;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  .items {
+    overflow:auto;
+    margin-bottom: 40px;
+  }
+    h2 {
+      margin: 0;
+    }
 }
+
+.cartTotalBlock {
+ ul {
+  display:block;
+  margin-bottom: 30px !important;
+  li {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 20px;
+    div {
+      flex: 1;
+      height: 1;
+      border-bottom: 1px dashed #dfdfdf;
+      position:relative;
+      top: -4px;
+      margin: 0 7px;
+    }
+  }
+ }
+  .greenButton {
+    position: relative;
+    &:hover {
+      img {
+        transform: translateX(5px);
+    }
+  }
+
+    img {
+      position:absolute;
+      right: 30px;
+      top: 20px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
 }
+.greenButton {
+
+    width: 100%;
+    height: 55px;
+    background: #9DD558;
+    border-radius: 18px;
+    border: 0;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background 0.2s ease-in-out;
+
+    &:hover {
+      background: lighten(#9dd558, 5%) ;
+    }
+  
+    &:active {
+      background: darken( #9dd558, 5%);
+    }
+   }
+
 .cartItem {
   border: 1px solid #f3f3f3;
+  border-radius: 20px ;
+  overflow: hidden;
+  padding: 20px;
+  .cartItemImg {
+    height: 70px;
+    width:70px;
+    background-size: contain;
+    background-position: 0 -3px ;
+    background-repeat: no-repeat;
+    margin-right: 20px;
+  }
   p {
     font-size: 16px;
+    margin-right: 0;
   }
   b {
     font-size: 14px;
