--- a/src/index.scss
+++ b/src/index.scss
@@ -104,6 +104,8 @@ b {
 }
 
 .drawer {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   width: 420px;
   height: 100%;
@@ -112,6 +114,7 @@ b {
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
   .items {
+    flex: 1;
     overflow:auto;
     margin-bottom: 40px;
   }
