--- a/src/index.scss
+++ b/src/index.scss
@@ -38,6 +38,7 @@ header {
       margin: 0;
     }
   }
+
   .button {
     background: #ffffff;
     border: 1px solid #f2f2f2;
@@ -52,6 +53,14 @@ header {
   border: 1px solid #f3f3f3; 
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+  .clear {
+    position:absolute;
+    width: 18px;
+    height: 18px;
+    top: 14px;
+    right: 15px;
+  }
 
   input {
     border: 0;
