--- a/src/index.scss
+++ b/src/index.scss
@@ -37,7 +37,35 @@ header {
     h1 {
       margin: 0;
     }
+}
+
+.cartEmpty {
+  text-align: center;
+
+  p {
+    width: 280px;
+    line-height: 24px;
   }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover {
+      img {
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
 
   .button {
     background: #ffffff;
@@ -69,6 +97,9 @@ header {
     width: 200px;
   }
 }
+
+
+
 .overlay {
   position:absolute;
   left: 0;
